Fix layout and alignment issues
CSS styling was not properly setting layout. Alignment of elements was also off. Reworking some of the styling beginning at Main.js has solved it.

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,11 @@
 .footer {
+  height: 40px;
+  box-sizing: border-box;
   display: flex;
   width: 100%;
   margin: 0;
   padding: 15px;
-  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  background-color: #D8D8D8;
 }
