--- a/src/Main.css
+++ b/src/Main.css
@@ -1,35 +1,20 @@
 .main {
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
 }
 
-.main__center {
-  flex: 1;
-  padding: 15px;
-}
-
-@media (min-width: 601px) {
+@media (min-width: 481px) {
   .main {
     max-width: 700px;
-  }
-  .main__center {
-    display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    flex: 1;
   }
 }
 
 @media (max-width: 480px) {
   .main {
-    height: 100vh;
-    width: 100vw;
-  }
-  .main__center {
-    display: flex;
     flex-direction: column;
-    flex: 1;
   }
 }
