--- a/src/Notes.css
+++ b/src/Notes.css
@@ -1,20 +1,22 @@
-.notes * * * {
-  box-sizing: border-box;
-}
-
 .notes {
+  height: 90%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  flex: 1;
   margin: 0;
-  padding: 15px 30px;
-  background-color: #D8D8D8;
   font-size: 18px;
 }
 
 .notes > h3 {
   margin: 0;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
+}
+
+.notes__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  line-height: 1.6em;
 }
 
 .notes__item {
@@ -32,36 +34,38 @@
 
 .notes__item-delete {
   margin: 3px;
-  /* margin-left: auto; */
   cursor: pointer;
   opacity: 25%;
 }
 
 .notes__add {
+  margin: 0;
+}
+
+.notes__add-item {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin: 0;
   padding: 0;
 }
 
-.notes__add > * {
+.notes__add-item > * {
   margin: 0;
   padding: 0;
 }
 
-.notes__add > img {
+.notes__add-item > img {
   min-width: 15px;
   max-width: 15px;
 }
 
-.notes__add > input {
+.notes__add-item > input {
   flex-grow: 1;
   font-size: 16px;
   opacity: 50%;
 }
 
-.notes__add > button {
+.notes__add-item > button {
   flex-grow: 1;
   font-size: 15px;
   opacity: 50%;
@@ -73,21 +77,37 @@
   opacity: 90%;
 }
 
-@media (min-width: 601px) {
-  .lists {
-    flex: 1;
+@media (min-width: 481px) {
+  .notes {
+    width: 50%;
+    padding: 20px 20px 20px 0;
+  }
+  .notes > h3 {
+    padding-left: 40px
+  }
+  .notes__list {
+    padding-left: 40px;
+    border-left: 1px solid #D8D8D8;
+    margin-left: -1px;
+  }
+  .notes__add {
+    margin: 0;
+    padding: 0px 0px 0px 40px;
   }
 }
 
-@media (max-width: 600px) {
-  .lists {
+@media (max-width: 480px) {
+  .notes {
     flex: 1;
+    margin: 0;
+    padding: 15px;
+    overflow-y: scroll;
   }
-}
-
-.notes__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  line-height: 1.6em;
+  .notes__list {
+    overflow-y: scroll;
+  }
+  .notes__add {
+    margin: 0;
+    padding: 0px 0px 10px 0;
+  }
 }
